# neviri-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyinstaller.spec  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: changelog.md  getting-started.md  index.md  privacy.md
docs/decisions/: 0001-vm-surface.md  0002-phase-1-alpha-cut.md  0003-phase-2-exit.md
homebrew-tap/: README.md
homebrew-tap/Formula/: neviri.rb
scripts/: refresh-openapi-snapshot.py
src/neviri_cli/: __init__.py  __main__.py  app.py  auth.py  config.py  context.py  credentials.py  exceptions.py
src/neviri_cli/client/: __init__.py  backup.py  base.py  block_storage.py  compute.py  credit.py  database.py  deployment.py  factory.py  load_balancer.py  networking.py  object_storage.py  payment.py
src/neviri_cli/commands/: __init__.py  _common.py  app.py  auth.py  completion.py  config.py  credit.py  deploy.py  floating_ip.py  load_balancer.py  network.py  object_storage.py  payment.py  subnet.py  version.py  vm.py  volume.py
src/neviri_cli/commands/db/: __init__.py  _engine.py  mongo.py  mysql.py  pg.py
src/neviri_cli/output/: __init__.py  json.py  table.py  tree.py  yaml.py
src/neviri_cli/utils/: redact.py  telemetry.py  version_check.py
tests/: conftest.py  test_auth.py  test_client_backup.py  test_client_base.py  test_client_block_storage.py  test_client_compute.py  test_client_credit_payment.py  test_client_database.py  test_client_deployment.py  test_client_factory.py  test_client_load_balancer.py  test_client_networking.py  test_client_object_storage.py  test_commands_app_deploy.py  test_commands_auth.py  test_commands_completion.py  test_commands_config.py  test_commands_credit_payment.py  test_commands_db.py  test_commands_lb.py  test_commands_networking.py  test_commands_object.py  test_commands_version.py  test_commands_vm.py  test_commands_volume.py  test_config.py  test_credentials.py  test_e2e_workflow.py  test_exceptions.py  test_global_flags.py  test_output.py  test_redact.py  test_smoke.py  test_startup_perf.py  test_telemetry.py  test_version_check.py
tests/parity/: backend_routes.json  route_map.py  test_parity.py
