[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neviri-cli"
version = "0.9.0b1"
description = "Official command-line interface for the Neviri Cloud Platform."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Neviri Engineering" },
]
keywords = ["neviri", "cli", "cloud", "openstack", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "pydantic>=2.7",
    "keyring>=25.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "respx>=0.21",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
binary = [
    "pyinstaller>=6.5",
]

[project.scripts]
neviri = "neviri_cli.app:app"

[project.urls]
Homepage = "https://github.com/ArcLogiQ/neviri-cli"
Repository = "https://github.com/ArcLogiQ/neviri-cli"
Issues = "https://github.com/ArcLogiQ/neviri-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neviri_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v --tb=short --cov=neviri_cli --cov-report=term-missing --cov-fail-under=97"

[tool.coverage.run]
source = ["src/neviri_cli"]
omit = ["src/neviri_cli/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src/neviri_cli"]
